--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li class="projects-item">
                 <span class="project"> 
-                    <a href="http://www.w3.org/2000/svg" class="project-link">Figma link (still in progress)</a>
+                    <a href="figma-svgrepo-com.svg" class="project-link">Figma link (still in progress)</a>
                      ......................
                     <span class="project bracket"> [ </span> StudioJam/My role - research and design <span class="project bracket"> ] </span> 
                 </span>
