--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <p>
                     <div>
                         <p class="logo-container">
-                          <img src="file:///Users/danakoziy/Downloads/linkedin-social-media-svgrepo-com.svg" alt="Logo" class="img logo1">
+                          <img src="img/linkedin-social-media-svgrepo-com.svg" alt="Logo" class="img logo1">
                           <a href="https://www.linkedin.com/in/dana-kozii-529157214/" class="contact-link">linkedin.com</a> 
                         </p>
                       </div>                                            
@@ -149,7 +149,7 @@
                 <p>
                     <div>
                         <p class="logo-container">
-                          <img src="file:///Users/danakoziy/Downloads/figma-svgrepo-com.svg" alt="Logo" class="img logo">
+                          <img src="img/figma-svgrepo-com.svg" alt="Logo" class="img logo">
                           <a href="https://www.figma.com/proto/gTabhPkH3FvkzWv7azoEnT/My-Portfolio?page-id=0%3A1&type=design&node-id=0-3&viewport=323%2C350%2C0.31&scaling=min-zoom&starting-point-node-id=0%3A3" class="portfolio-link">Figma Prototype</a> 
                         </p>
                       </div>                                            
