--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div>
                         <p class="logo-container">
                           <img src="img/figma-svgrepo-com.svg" alt="Logo" class="img logo">
-                          <a href="https://www.figma.com/file/nVhfgVaZqRwv6Wqajms8GS/My-Portfolio-(UI%2FUX-Designer)?type=design&node-id=0%3A1&t=bPrhDRuSEDqq8zlf-1" class="portfolio-link">Figma Prototype</a> 
+                          <a href="https://www.figma.com/proto/nVhfgVaZqRwv6Wqajms8GS/My-Portfolio-(UI%2FUX-Designer)?page-id=0%3A1&type=design&node-id=0-3&viewport=498%2C123%2C0.14&scaling=scale-down-width&starting-point-node-id=0%3A3" class="portfolio-link">Figma Prototype</a> 
                         </p>
                       </div>                                            
                 </p>
