--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h4 class="work-position">UI/UX Designer <span class="organization"> Freelance </span> </h4>
             <p class="period">September 2022 - up to now <span class="line"> | </span> Ukraine </p>
             <ul class="work-list">
-                <li class="work-list-item">I'm a UI UX designer who's currently working on the design of the new app for booking a music studio that's still in development. I've poured my heart and soul into creating a user experience that's not only visually appealing but also incredibly intuitive. </li>
+                <li class="work-list-item">I'm a UI UX designer who's currently working on the design of the new app for booking a music studio that's still in development. I've poured my heart and soul into creating a user experience that's not only visually appealing but also intuitive. </li>
                 <li class="work-list-item">Also, I made a significant impact by designing a section on an existing website.</li>
                 <li class="work-list-item">On top of all that, I've even dabbled in web design using Webflow. I've created a simple website that combines captivating visuals, seamless navigation, and a responsive layout. </li>
                 <p class="work-list-item">I'm excited to share more of my work with you soon. Designing isn't just a job to me; it's my passion, and I can't wait to see where it takes me next. </p>
