--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
          <h4 class="work-position">Cultural Studies <span class="education-position">Ukrainian Catholic University</span></h4>
      <p class="period">September 2018 - July 2022 <span class="line">|</span> Ukraine, Lviv</p>
      <h4 class="work-position">Mobile Apps Design <span class="education-position">Projector</span></h4>
-     <p class="period">March 2023 - till now <span class="line">|</span> Ukraine</p>
+     <p class="period">April 8, 2023 - July 6, 2023 <span class="line">|</span> Ukraine</p>
         </div>
             
         </div>
