--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li class="projects-item">
                 <span class="project"> 
-                    <a href="https://www.figma.com/file/HRv99Qw2mTIpuAEnUqfNp3/StudioJam-%2F-Startup?type=design&node-id=1%3A3091&t=cmvtqnPvyHWtGtaU-1" class="project-link">Figma link (still in progress)</a>
+                    <a href="https://www.figma.com/file/HRv99Qw2mTIpuAEnUqfNp3/StudioJam-%2F-Startup?type=design&node-id=303%3A10868&mode=design&t=4cbD5uL8za92B9wg-1">Figma link (still in progress)</a>
                      ......................
                     <span class="project bracket"> [ </span> StudioJam/My role - research and design <span class="project bracket"> ] </span> 
                 </span>
