--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
             <li class="projects-item">
                 <span class="project"> 
-                    <a href="file:///Users/danakoziy/Documents/IT/Resume/index.html" class="project-link">This Resume</a>
+                    <a href="https://dana-dark.github.io/" class="project-link">This Resume</a>
                     ........................................................
                     <span class="project bracket"> [ </span> HTML5, CSS3 <span class="project bracket"> ] </span> 
                 </span>
