--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
             <li class="projects-item">
                 <span class="project"> 
-                    <a href="https://dana-dark.github.io/danadark.github.io/" class="project-link"> Це резюме </a>
+                    <a href="https://dana-dark.github.io/danadark.github.io" class="project-link"> Це резюме </a>
                     ........................................................
                     <span class="project bracket"> [ </span> HTML5, CSS3 <span class="project bracket"> ] </span> 
                 </span>
@@ -91,7 +91,7 @@
             <h4 class="work-position">CR<span class="organization"> Wizz Air </span>  </h4>
             <p class="period"> Серпень 2022 - Січень 2023 <span class="line"> | </span> Україна </p>
             <ul class="work-list">
-              <li class="work-list-item">Вів офіційне листування з пасажирами компанії Wizz Air, переважно англійською, іноді українською. </br> Обов'язки: відповідати на скарги, запитання та виплачувати компенсацію у випадках, передбачених Загальними умовами перевезення. </li>
+              <li class="work-list-item">Вела офіційне листування з пасажирами компанії Wizz Air, переважно англійською, іноді українською. </br> Обов'язки: відповідати на скарги, запитання та виплачувати компенсацію у випадках, передбачених Загальними умовами перевезення. </li>
             </ul>
           </div>
         <!-- Company 3 -->
