--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="project"> 
                     <a href="https://www.figma.com/file/HRv99Qw2mTIpuAEnUqfNp3/StudioJam-%2F-Startup?type=design&node-id=303%3A10868&mode=design&t=QokfUE5LkISbvMHB-1" class="project-link">Figma link (still in progress)</a>
                      ......................
-                    <span class="project bracket"> [ </span> StudioJam/Моя роль - Дизайн, user research, Information Architecture <span class="project bracket"> ] </span> 
+                    <span class="project bracket"> [ </span> StudioJam/Моя роль - Дизайн мобільного додатку, user research, Information Architecture <span class="project bracket"> ] </span> 
                 </span>
               
             </li>
