--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 </span>
               
             </li>
+             <li class="projects-item">
+                <span class="project"> 
+                    <a href="https://ecocalendar.dnister.in.ua/" class="project-link">ecocalendar.dniter.in.ua</a>
+                    ........................................
+                    <span class="project bracket"> [ </span>  Weblium/Моя роль - Дизайн адаптивного лендінгу для Open Dnister, підключення домену та стороннього коду для анімованих елементів <span class="project bracket"> ] </span> 
+                </span>
+              
+            </li>
             <li class="projects-item">
                 <span class="project"> 
                     <a href="https://dana-dark.github.io/danadark.github.io" class="project-link"> Це резюме </a>
