--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
 
 
                     
-                </span></li>
+                </span></li> 
+                 <li class="soft-skills-item"> <span class="soft-skills-text"></span></li>
             </ul>
         </div>
     </aside>
