--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
              <li class="projects-item">
                 <span class="project"> 
                     <a href="https://ecocalendar.dnister.in.ua/" class="project-link">ecocalendar.dniter.in.ua</a>
-                    ......................
+                    ..............................
                     <span class="project bracket"> [ </span>  Weblium/Моя роль - Дизайн адаптивного лендінгу для Open Dnister, підключення домену та стороннього коду для анімованих елементів <span class="project bracket"> ] </span> 
                 </span>
               
@@ -223,7 +223,8 @@
 
                     
                 </span></li> 
-                 <li class="soft-skills-item"> <span class="soft-skills-text"></span></li>
+                 <li class="soft-skills-item">   </li>
+                <li class="soft-skills-item">   </li>
             </ul>
         </div>
     </aside>
