--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li class="projects-item">
                 <span class="project"> 
                     <a href="https://dana-dark.github.io/danadark.github.io" class="project-link"> Це резюме </a>
-                    ........................................................
+                    ..........................................................
                     <span class="project bracket"> [ </span> HTML5, CSS3 <span class="project bracket"> ] </span> 
                 </span>
             
@@ -223,8 +223,8 @@
 
                     
                 </span></li> 
-                 <li class="soft-skills-item">   </li>
-                <li class="soft-skills-item">   </li>
+                 <p class="soft-skills-item">   </p>
+                <p class="soft-skills-item">   </p>
             </ul>
         </div>
     </aside>
