--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                 </span></li> 
                  <p class="soft-skills-item">   </p>
                 <p class="soft-skills-item">   </p>
+                <p class="soft-skills-item">   </p>
+                <p class="soft-skills-item">   </p>
+                <p class="soft-skills-item">   </p>
+                <p class="soft-skills-item">   </p>
+                <p class="soft-skills-item">   </p>
+                <p class="soft-skills-item">   </p>
             </ul>
         </div>
     </aside>
