--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- Company 3 -->
         <div class="company-3">
             <h4 class="work-position">Викладачка англійської мови <span class="organization"> Buki.com </span>  </h4>
-            <p class="period"> Березень 2018 - Жовтень 2020 <span class="line"> | </span> Здебільшого Україна </p>
+            <p class="period"> Березень 2018 - Жовтень 2020 <span class="line"> | </span> Україна </p>
             <ul class="work-list">
                 <li class="work-list-item"> Майже 3 роки проводила індивідуальні заняття з граматики та розмовної англійської мови для українців та кількох іноземців. </li>
              </ul>
